优化1.20.1项目结构